crates/tlang_parser/tests/snapshots/parser__if_else_as_last_expression.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"fn main() { if true { 1 } else { 2 } }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 15,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 14,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "main",
                span: Span(
                  start: 3,
                  end: 7,
                  start_lc: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 7,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 3,
              end: 7,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 7,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 3,
            end: 7,
            start_lc: LineColumn(
              line: 0,
              column: 3,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 7,
            ),
          ),
        ),
        parameters: [],
        guard: None,
        return_type_annotation: None,
        body: Block(
          id: 13,
          statements: [],
          expression: Some(Expr(
            id: 12,
            kind: IfElse(IfElseExpression(
              condition: Expr(
                id: 5,
                kind: Literal(Boolean(true)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 15,
                  end: 19,
                  start_lc: LineColumn(
                    line: 0,
                    column: 15,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 19,
                  ),
                ),
              ),
              then_branch: Block(
                id: 8,
                statements: [],
                expression: Some(Expr(
                  id: 7,
                  kind: Literal(UnsignedInteger(1)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 22,
                    end: 23,
                    start_lc: LineColumn(
                      line: 0,
                      column: 22,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 23,
                    ),
                  ),
                )),
                span: Span(
                  start: 20,
                  end: 25,
                  start_lc: LineColumn(
                    line: 0,
                    column: 20,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 25,
                  ),
                ),
              ),
              else_branches: [
                ElseClause(
                  condition: None,
                  consequence: Block(
                    id: 11,
                    statements: [],
                    expression: Some(Expr(
                      id: 10,
                      kind: Literal(UnsignedInteger(2)),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 33,
                        end: 34,
                        start_lc: LineColumn(
                          line: 0,
                          column: 33,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 34,
                        ),
                      ),
                    )),
                    span: Span(
                      start: 31,
                      end: 36,
                      start_lc: LineColumn(
                        line: 0,
                        column: 31,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 36,
                      ),
                    ),
                  ),
                ),
              ],
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 12,
              end: 36,
              start_lc: LineColumn(
                line: 0,
                column: 12,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 36,
              ),
            ),
          )),
          span: Span(
            start: 10,
            end: 38,
            start_lc: LineColumn(
              line: 0,
              column: 10,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 38,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 38,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 38,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 38,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 38,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 38,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 38,
    ),
  ),
)
