crates/tlang_parser/tests/snapshots/parser__if_else_if_statement.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"if true { 1; } else if false { 2; }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 12,
        kind: IfElse(IfElseExpression(
          condition: Expr(
            id: 4,
            kind: Literal(Boolean(true)),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 3,
              end: 7,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 7,
              ),
            ),
          ),
          then_branch: Block(
            id: 7,
            statements: [
              Stmt(
                id: 5,
                kind: Expr(Expr(
                  id: 6,
                  kind: Literal(UnsignedInteger(1)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 10,
                    end: 11,
                    start_lc: LineColumn(
                      line: 0,
                      column: 10,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 11,
                    ),
                  ),
                )),
                span: Span(
                  start: 10,
                  end: 12,
                  start_lc: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 12,
                  ),
                ),
                leading_comments: [],
                trailing_comments: [],
              ),
            ],
            expression: None,
            span: Span(
              start: 8,
              end: 14,
              start_lc: LineColumn(
                line: 0,
                column: 8,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 14,
              ),
            ),
          ),
          else_branches: [
            ElseClause(
              condition: Some(Expr(
                id: 8,
                kind: Literal(Boolean(false)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 23,
                  end: 28,
                  start_lc: LineColumn(
                    line: 0,
                    column: 23,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 28,
                  ),
                ),
              )),
              consequence: Block(
                id: 11,
                statements: [
                  Stmt(
                    id: 9,
                    kind: Expr(Expr(
                      id: 10,
                      kind: Literal(UnsignedInteger(2)),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 31,
                        end: 32,
                        start_lc: LineColumn(
                          line: 0,
                          column: 31,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 32,
                        ),
                      ),
                    )),
                    span: Span(
                      start: 31,
                      end: 33,
                      start_lc: LineColumn(
                        line: 0,
                        column: 31,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 33,
                      ),
                    ),
                    leading_comments: [],
                    trailing_comments: [],
                  ),
                ],
                expression: None,
                span: Span(
                  start: 29,
                  end: 35,
                  start_lc: LineColumn(
                    line: 0,
                    column: 29,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 35,
                  ),
                ),
              ),
            ),
          ],
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 35,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 35,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 35,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 35,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 35,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 35,
    ),
  ),
)
