crates/tlang_parser/tests/snapshots/parser__if_else_statement-2.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"if (1 + 2) { 3 + 4; } else { 5 + 6; }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 17,
        kind: IfElse(IfElseExpression(
          condition: Expr(
            id: 6,
            kind: BinaryOp(BinaryOpExpression(
              op: Add,
              lhs: Expr(
                id: 4,
                kind: Literal(UnsignedInteger(1)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 4,
                  end: 5,
                  start_lc: LineColumn(
                    line: 0,
                    column: 4,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 5,
                  ),
                ),
              ),
              rhs: Expr(
                id: 5,
                kind: Literal(UnsignedInteger(2)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 8,
                  end: 9,
                  start_lc: LineColumn(
                    line: 0,
                    column: 8,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 9,
                  ),
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 3,
              end: 10,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 10,
              ),
            ),
          ),
          then_branch: Block(
            id: 11,
            statements: [
              Stmt(
                id: 7,
                kind: Expr(Expr(
                  id: 10,
                  kind: BinaryOp(BinaryOpExpression(
                    op: Add,
                    lhs: Expr(
                      id: 8,
                      kind: Literal(UnsignedInteger(3)),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 13,
                        end: 14,
                        start_lc: LineColumn(
                          line: 0,
                          column: 13,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 14,
                        ),
                      ),
                    ),
                    rhs: Expr(
                      id: 9,
                      kind: Literal(UnsignedInteger(4)),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 17,
                        end: 18,
                        start_lc: LineColumn(
                          line: 0,
                          column: 17,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 18,
                        ),
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 13,
                    end: 18,
                    start_lc: LineColumn(
                      line: 0,
                      column: 13,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 18,
                    ),
                  ),
                )),
                span: Span(
                  start: 13,
                  end: 19,
                  start_lc: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 19,
                  ),
                ),
                leading_comments: [],
                trailing_comments: [],
              ),
            ],
            expression: None,
            span: Span(
              start: 11,
              end: 21,
              start_lc: LineColumn(
                line: 0,
                column: 11,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 21,
              ),
            ),
          ),
          else_branches: [
            ElseClause(
              condition: None,
              consequence: Block(
                id: 16,
                statements: [
                  Stmt(
                    id: 12,
                    kind: Expr(Expr(
                      id: 15,
                      kind: BinaryOp(BinaryOpExpression(
                        op: Add,
                        lhs: Expr(
                          id: 13,
                          kind: Literal(UnsignedInteger(5)),
                          leading_comments: [],
                          trailing_comments: [],
                          span: Span(
                            start: 29,
                            end: 30,
                            start_lc: LineColumn(
                              line: 0,
                              column: 29,
                            ),
                            end_lc: LineColumn(
                              line: 0,
                              column: 30,
                            ),
                          ),
                        ),
                        rhs: Expr(
                          id: 14,
                          kind: Literal(UnsignedInteger(6)),
                          leading_comments: [],
                          trailing_comments: [],
                          span: Span(
                            start: 33,
                            end: 34,
                            start_lc: LineColumn(
                              line: 0,
                              column: 33,
                            ),
                            end_lc: LineColumn(
                              line: 0,
                              column: 34,
                            ),
                          ),
                        ),
                      )),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 29,
                        end: 34,
                        start_lc: LineColumn(
                          line: 0,
                          column: 29,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 34,
                        ),
                      ),
                    )),
                    span: Span(
                      start: 29,
                      end: 35,
                      start_lc: LineColumn(
                        line: 0,
                        column: 29,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 35,
                      ),
                    ),
                    leading_comments: [],
                    trailing_comments: [],
                  ),
                ],
                expression: None,
                span: Span(
                  start: 27,
                  end: 37,
                  start_lc: LineColumn(
                    line: 0,
                    column: 27,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 37,
                  ),
                ),
              ),
            ),
          ],
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 37,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 37,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 37,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 37,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 37,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 37,
    ),
  ),
)
