crates/tlang_parser/tests/snapshots/parser__if_else_statement.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"if true { 1; } else { 2; }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 11,
        kind: IfElse(IfElseExpression(
          condition: Expr(
            id: 4,
            kind: Literal(Boolean(true)),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 3,
              end: 7,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 7,
              ),
            ),
          ),
          then_branch: Block(
            id: 7,
            statements: [
              Stmt(
                id: 5,
                kind: Expr(Expr(
                  id: 6,
                  kind: Literal(UnsignedInteger(1)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 10,
                    end: 11,
                    start_lc: LineColumn(
                      line: 0,
                      column: 10,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 11,
                    ),
                  ),
                )),
                span: Span(
                  start: 10,
                  end: 12,
                  start_lc: LineColumn(
                    line: 0,
                    column: 10,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 12,
                  ),
                ),
                leading_comments: [],
                trailing_comments: [],
              ),
            ],
            expression: None,
            span: Span(
              start: 8,
              end: 14,
              start_lc: LineColumn(
                line: 0,
                column: 8,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 14,
              ),
            ),
          ),
          else_branches: [
            ElseClause(
              condition: None,
              consequence: Block(
                id: 10,
                statements: [
                  Stmt(
                    id: 8,
                    kind: Expr(Expr(
                      id: 9,
                      kind: Literal(UnsignedInteger(2)),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 22,
                        end: 23,
                        start_lc: LineColumn(
                          line: 0,
                          column: 22,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 23,
                        ),
                      ),
                    )),
                    span: Span(
                      start: 22,
                      end: 24,
                      start_lc: LineColumn(
                        line: 0,
                        column: 22,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 24,
                      ),
                    ),
                    leading_comments: [],
                    trailing_comments: [],
                  ),
                ],
                expression: None,
                span: Span(
                  start: 20,
                  end: 26,
                  start_lc: LineColumn(
                    line: 0,
                    column: 20,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 26,
                  ),
                ),
              ),
            ),
          ],
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 26,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 26,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 26,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 26,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 26,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 26,
    ),
  ),
)
