crates/tlang_parser/tests/snapshots/parser__if_statement.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"if (1 + 2) { 3 + 4; }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 12,
        kind: IfElse(IfElseExpression(
          condition: Expr(
            id: 6,
            kind: BinaryOp(BinaryOpExpression(
              op: Add,
              lhs: Expr(
                id: 4,
                kind: Literal(UnsignedInteger(1)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 4,
                  end: 5,
                  start_lc: LineColumn(
                    line: 0,
                    column: 4,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 5,
                  ),
                ),
              ),
              rhs: Expr(
                id: 5,
                kind: Literal(UnsignedInteger(2)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 8,
                  end: 9,
                  start_lc: LineColumn(
                    line: 0,
                    column: 8,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 9,
                  ),
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 3,
              end: 10,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 10,
              ),
            ),
          ),
          then_branch: Block(
            id: 11,
            statements: [
              Stmt(
                id: 7,
                kind: Expr(Expr(
                  id: 10,
                  kind: BinaryOp(BinaryOpExpression(
                    op: Add,
                    lhs: Expr(
                      id: 8,
                      kind: Literal(UnsignedInteger(3)),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 13,
                        end: 14,
                        start_lc: LineColumn(
                          line: 0,
                          column: 13,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 14,
                        ),
                      ),
                    ),
                    rhs: Expr(
                      id: 9,
                      kind: Literal(UnsignedInteger(4)),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: 17,
                        end: 18,
                        start_lc: LineColumn(
                          line: 0,
                          column: 17,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 18,
                        ),
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 13,
                    end: 18,
                    start_lc: LineColumn(
                      line: 0,
                      column: 13,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 18,
                    ),
                  ),
                )),
                span: Span(
                  start: 13,
                  end: 19,
                  start_lc: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 19,
                  ),
                ),
                leading_comments: [],
                trailing_comments: [],
              ),
            ],
            expression: None,
            span: Span(
              start: 11,
              end: 21,
              start_lc: LineColumn(
                line: 0,
                column: 11,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 21,
              ),
            ),
          ),
          else_branches: [],
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 21,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 21,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 21,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 21,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 21,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 21,
    ),
  ),
)
